// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformContext should have a platform string for amp 1`] = `
<DocumentFragment>
  <span>
    amp
  </span>
</DocumentFragment>
`;

exports[`PlatformContext should have a platform string for canonical 1`] = `
<DocumentFragment>
  <span>
    canonical
  </span>
</DocumentFragment>
`;

exports[`PlatformContext should have a platform string for default 1`] = `
<DocumentFragment>
  <span>
    default
  </span>
</DocumentFragment>
`;
